--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,7 +1,7 @@
 Vagrant.configure("2") do |config|
 
-  #config.vm.box = "ubuntu/bionic64"
-  config.vm.box = 'ubuntu/focal64'
+  config.vm.box = "ubuntu/bionic64"
+  #config.vm.box = 'ubuntu/focal64'
 
   # Optional - enlarge disk (will also convert the format from VMDK to VDI):
   config.disksize.size = "50GB"
