--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -9,9 +9,11 @@ Vagrant.configure("2") do |config|
   config.vm.provider "virtualbox" do |vb|
     # Display the VirtualBox GUI when booting the machine
     vb.gui = true
-    vb.memory = 2048
-    vb.cpus = 2
+    vb.memory = 6144
+    vb.cpus = 1
     vb.customize ['modifyvm', :id, '--clipboard', 'bidirectional']
+    vb.customize ['modifyvm', :id, '--graphicscontroller', 'VBoxSVGA']
+    vb.customize ["modifyvm", :id, "--vram", "64"]
   end
 
   # config.vm.provision "shell", inline: <<-SCRIPT
